move endpoints, change gitignore
